--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
    
-    <title>React App</title>
+    <title>Api youtube</title>
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
   </body>
